test_bluesuit_console/blue_dir/include/TestEngine.h


TESTENGINE_API(int32) psClearAll(uint32 handle, uint16 store);
TESTENGINE_API(int32) psFactorySet(uint32 handle);
TESTENGINE_API(int32) psFactoryRestoreAll(uint32 handle);
TESTENGINE_API(int32) psFactoryRestore(uint32 handle);
TESTENGINE_API(int32) psSize(uint32 handle, uint16 psKey, uint16 store, uint16 * size);
TESTENGINE_API(int32) psWrite(uint32 handle, uint16 psKey, uint16 store, 
                            uint16 length, const uint16 data[]);
TESTENGINE_API(int32) psWriteVerify(uint32 handle, uint16 psKey, uint16 store, 
                                    uint16 length, const uint16 data[]);
TESTENGINE_API(int32) psWriteBdAddr(uint32 handle, uint32 lap, uint32 uap, uint32 nap);
TESTENGINE_API(int32) psReadModuleId(uint32 handle, uint32 * moduleId);
TESTENGINE_API(int32) psReadXtalFtrim(uint32 handle, uint16 * fTrim);
TESTENGINE_API(int32) psWriteXtalFtrim(uint32 handle, uint16 fTrim);
TESTENGINE_API(int32) psReadXtalOffset(uint32 handle, int16 * offset);
TESTENGINE_API(int32) psWriteXtalOffset(uint32 handle, int16 offset);
TESTENGINE_API(int32) psWriteModuleSecurityCode(uint32 handle, const uint16 code[]);
TESTENGINE_API(int32) psWriteModuleId(uint32 handle, uint32 moduleId);
TESTENGINE_API(int32) psWriteBaudrate(uint32 handle, uint16 value);
TESTENGINE_API(int32) psWriteRadiotestFirstTrimTime(uint32 handle, uint32 time);
TESTENGINE_API(int32) psReadRadiotestFirstTrimTime(uint32 handle, uint32 * time);
TESTENGINE_API(int32) psWriteRadiotestLoLvlTrimEnable(uint32 handle, uint16 state);
TESTENGINE_API(int32) psReadRadiotestLoLvlTrimEnable(uint32 handle, uint16 * state);
TESTENGINE_API(int32) psWriteRadiotestSubsequentTrimTime(uint32 handle, uint32 time);
TESTENGINE_API(int32) psReadRadiotestSubsequentTrimTime(uint32 handle, uint32 * time);
TESTENGINE_API(int32) psWriteHostInterface(uint32 handle, uint16 transport);
TESTENGINE_API(int32) psReadHostInterface(uint32 handle, uint16 * transport);
TESTENGINE_API(int32) psWriteUsbAttributes(uint32 handle, uint16 bmAttributes);
TESTENGINE_API(int32) psWriteDPlusPullup(uint32 handle, uint16 pioPin);
TESTENGINE_API(int32) psWriteUsbMaxPower(uint32 handle, uint16 maxPower);
TESTENGINE_API(int32) psWritePioProtectMask(uint32 handle, uint16 mask);
TESTENGINE_API(int32) psReadPioProtectMask(uint32 handle, uint16 * mask);
TESTENGINE_API(int32) psWriteTxOffsetHalfMhz(uint32 handle, int16 offset);
TESTENGINE_API(int32) psReadTxOffsetHalfMhz(uint32 handle, int16 * offset);
TESTENGINE_API(int32) psWriteUsrValue(uint32 handle, uint16 userNo, uint16 length, 
                                        const uint16 data[]);
TESTENGINE_API(int32) psReadUsrValue(uint32 handle, uint16 userNo, uint16 maxLen, 
                                    uint16 * length, uint16 data[]);
TESTENGINE_API(int32) psWritePowerTable(uint32 handle, uint16 numEntries, 
                                        const uint8 intPA[] , const uint8 extPA[], 
                                        const int32 power[]);
TESTENGINE_API(int32) psReadPowerTable(uint32 handle, int32 maxSize, 
                                        int32 * numEntries, uint8 intPA[], 
                                        uint8 extPA[], int32 power[]);
TESTENGINE_API(int32) psWriteVmDisable(uint32 handle, uint8 vmDisable);
TESTENGINE_API(int32) psReadVmDisable(uint32 handle, uint8 * vmDisable);
TESTENGINE_API(int32) psMergeFromFile(uint32 handle, const char *filePath);
TESTENGINE_API(int32) hciSlave(uint32 handle);
TESTENGINE_API(int32) hciSetAfhHostChannelClass(uint32 handle, 
                                                uint8 const cClass[]);
TESTENGINE_API(int32) hciReadAfhChannelMap(uint32 handle, uint16 aclHandle, uint8* mode, 
                                            uint8 cMap[]);
TESTENGINE_API(int32) hciSetEventFilterAutoacceptConnection(uint32 handle);
TESTENGINE_API(int32) hciWriteInquiryScanActivity(uint32 handle, 
                                                uint16 inquiryscan_interval, 
                                                uint16 inquiryscan_window);
TESTENGINE_API(int32) hciWritePageScanActivity(uint32 handle, uint16 pagescan_interval, 
                                                uint16 pagescan_window);
TESTENGINE_API(int32) hciWriteScanEnable(uint32 handle, uint8 scan_enable);
TESTENGINE_API(int32) hciInquiry(uint32 handle, uint8 inquiryLength, uint8 numResponses, 
                                uint32 lap);
TESTENGINE_API(int32) hciGetInquiryResults(uint32 handle, uint32 lap[], uint8 uap[], 
                                            uint16 nap[], uint16 clockOffset[], 
                                            uint32 maxLen, uint32 * len);
TESTENGINE_API(int32) hciInquiryCancel(uint32 handle);
TESTENGINE_API(int32) hciCreateConnection(uint32 handle, uint32 lap, uint8 uap, 
                                        uint16 nap, uint16 pkt_type, 
                                        uint16 * connectionHandle);
TESTENGINE_API(int32) hciCreateConnectionNoInquiry(uint32 handle, uint32 lap, uint8 uap, 
                                                    uint16 nap, uint16 pkt_type, 
                                                    uint8 page_scan_rep_mode, 
                                                    uint8 page_scan_mode, 
                                                    uint16 clock_offset, 
                                                    uint8 allow_role_switch, 
                                                    uint16 * connectionHandle);
TESTENGINE_API(int32) hciCreateScoConnection(uint32 handle, uint16 aclConnectionHandle, 
                                                uint16 pkt_type, 
                                                uint16 * scoConnectionHandle);
TESTENGINE_API(int32) hciSetupScoConnection(uint32 handle, uint16 aclConnectionHandle, 
                                            uint32 txBandwidth, uint32 rxBandwidth,
                                            uint16 maxLatency, uint16 voiceSetting,
                                            uint8 retransEffort, uint16 pktType, 
                                            uint16 * scoConnectionHandle);
TESTENGINE_API(int32) hciReadVoiceSetting(uint32 handle, uint16* voiceSetting);
TESTENGINE_API(int32) hciWriteVoiceSetting(uint32 handle, uint16 voiceSetting);
TESTENGINE_API(int32) hciWriteLinkPolicySettings(uint32 handle, 
                                                    uint16 connection_handle, 
                                                    uint16 link_policy_settings);
TESTENGINE_API(int32) hciSendAclFile(uint32 handle, uint16 connHandle, 
                                        const char* fileName);
TESTENGINE_API(int32) hciSendAclData(uint32 handle, uint16 connHandle, 
                                        const uint8 data[], const uint16 length);
TESTENGINE_API(int32) hciGetAclData(uint32 handle, uint8 data[], uint32* numBytes);
TESTENGINE_API(int32) hciGetAclBytesRead(uint32 handle, uint32* numBytes);
TESTENGINE_API(int32) hciGetAclFileName(uint32 handle, char * fileName, 
                                        uint32* length);
TESTENGINE_API(int32) hciGetAclState(uint32 handle, int32* state);
TESTENGINE_API(int32) hciResetAclState(uint32 handle);
TESTENGINE_API(int32) hciReset(uint32 handle);
TESTENGINE_API(int32) bccmdGetAnaXtalFtrim(uint32 handle, uint16 * ftrim);
TESTENGINE_API(int32) bccmdSetAnaXtalFtrim(uint32 handle, uint16 ftrim);
TESTENGINE_API(int32) hciSniffMode(uint32 handle, uint16 connection_handle, 
                                    uint16 sniff_max_interval, 
                                    uint16 sniff_min_interval, 
                                    uint16 sniff_attempt, uint16 sniff_timeout);
TESTENGINE_API(int32) hciExitSniff(uint32 handle, uint16 connection_handle);
TESTENGINE_API(int32) hciDisconnect(uint32 handle, uint16 connection_handle);
TESTENGINE_API(int32) hciGetConnectionHandle(uint32 handle, uint32 lap, uint8 uap, 
                                            uint16 nap, uint16 * connectionHandle);
TESTENGINE_API(int32) hciConnectionStatus(uint32 handle, uint16 connection_handle);
TESTENGINE_API(int32) hciEnableDeviceUnderTestMode(uint32 handle);
TESTENGINE_API(int32) hciGetLinkQuality(uint32 handle, uint16 connection_handle, 
                                        uint8 * quality);
TESTENGINE_API(int32) hciReadRemoteVersionInformation(uint32 handle, 
                                                        uint16 connection_handle, 
                                                        uint32 r[]);
TESTENGINE_API(int32) hciReadRemoteNameRequest(uint32 handle, uint32 lap, uint8 uap, 
                                                uint16 nap, 
                                                uint8 page_scan_repetition_mode, 
                                                uint8 page_scan_offset, 
                                                uint16 clock_offset, char * r);
TESTENGINE_API(int32) dmRegisterReq(uint32 handle);
TESTENGINE_API(int32) dmSlave(uint32 handle);
TESTENGINE_API(int32) dmEnableDeviceUnderTestMode(uint32 handle);
TESTENGINE_API(int32) dmWritePageScanActivity(uint32 handle, uint16 pagescan_interval, 
                                                uint16 pagescan_window);
TESTENGINE_API(int32) dmWriteInquiryScanActivity(uint32 handle, 
                                                    uint16 inquiryscan_interval, 
                                                    uint16 inquiryscan_window);
TESTENGINE_API(int32) dmWriteScanEnable(uint32 handle, uint8 scan_enable);
TESTENGINE_API(int32) dmSetEventFilterAutoacceptConnection(uint32 handle);
TESTENGINE_API(int32) bccmdBc3PsuTrim(uint32 handle, uint16 data);
TESTENGINE_API(int32) bccmdChargerPsuTrim(uint32 handle, uint16 trim);
TESTENGINE_API(int32) bccmdBc3BuckReg(uint32 handle, uint16 data);
TESTENGINE_API(int32) bccmdPsuSmpsEnable(uint32 handle, uint16 reg);
TESTENGINE_API(int32) bccmdBc3MicEn(uint32 handle, uint16 data);
TESTENGINE_API(int32) bccmdPsuHvLinearEnable(uint32 handle, uint16 reg);
TESTENGINE_API(int32) bccmdBc3Led0(uint32 handle, uint16 data);
TESTENGINE_API(int32) bccmdLedEnable(uint32 handle, uint16 led, uint16 state);