BlueToolTestforJoy/blue_dir/include/VB6/TestEngineAPI.bas

Declare Function psClearAll Lib "TestEngine.dll" (ByVal handle As Long, ByVal store As Integer) As Long
Declare Function psFactorySet Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function psFactoryRestoreAll Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function psFactoryRestore Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function psSize Lib "TestEngine.dll" (ByVal handle As Long, ByVal psKey As Integer, ByVal store As Integer, ByRef size As Integer) As Long
Declare Function psWrite Lib "TestEngine.dll" (ByVal handle As Long, ByVal psKey As Integer, ByVal store As Integer, ByVal length As Integer, ByVal data As Integer) As Long
Declare Function psWriteVerify Lib "TestEngine.dll" (ByVal handle As Long, ByVal psKey As Integer, ByVal store As Integer, ByVal length As Integer, ByVal data As Integer) As Long
Declare Function psWriteBdAddr Lib "TestEngine.dll" (ByVal handle As Long, ByVal lap As Long, ByVal uap As Long, ByVal nap As Long) As Long
Declare Function psReadModuleId Lib "TestEngine.dll" (ByVal handle As Long, ByRef moduleId As Long) As Long
Declare Function psReadXtalFtrim Lib "TestEngine.dll" (ByVal handle As Long, ByRef fTrim As Integer) As Long
Declare Function psWriteXtalFtrim Lib "TestEngine.dll" (ByVal handle As Long, ByVal fTrim As Integer) As Long
Declare Function psReadXtalOffset Lib "TestEngine.dll" (ByVal handle As Long, ByRef offset As Integer) As Long
Declare Function psWriteXtalOffset Lib "TestEngine.dll" (ByVal handle As Long, ByVal offset As Integer) As Long
Declare Function psWriteModuleSecurityCode Lib "TestEngine.dll" (ByVal handle As Long, ByVal code As Integer) As Long
Declare Function psWriteModuleId Lib "TestEngine.dll" (ByVal handle As Long, ByVal moduleId As Long) As Long
Declare Function psWriteBaudrate Lib "TestEngine.dll" (ByVal handle As Long, ByVal value As Integer) As Long
Declare Function psWriteRadiotestFirstTrimTime Lib "TestEngine.dll" (ByVal handle As Long, ByVal time As Long) As Long
Declare Function psReadRadiotestFirstTrimTime Lib "TestEngine.dll" (ByVal handle As Long, ByRef time As Long) As Long
Declare Function psWriteRadiotestLoLvlTrimEnable Lib "TestEngine.dll" (ByVal handle As Long, ByVal state As Integer) As Long
Declare Function psReadRadiotestLoLvlTrimEnable Lib "TestEngine.dll" (ByVal handle As Long, ByRef state As Integer) As Long
Declare Function psWriteRadiotestSubsequentTrimTime Lib "TestEngine.dll" (ByVal handle As Long, ByVal time As Long) As Long
Declare Function psReadRadiotestSubsequentTrimTime Lib "TestEngine.dll" (ByVal handle As Long, ByRef time As Long) As Long
Declare Function psWriteHostInterface Lib "TestEngine.dll" (ByVal handle As Long, ByVal transport As Integer) As Long
Declare Function psReadHostInterface Lib "TestEngine.dll" (ByVal handle As Long, ByRef transport As Integer) As Long
Declare Function psWriteUsbAttributes Lib "TestEngine.dll" (ByVal handle As Long, ByVal bmAttributes As Integer) As Long
Declare Function psWriteDPlusPullup Lib "TestEngine.dll" (ByVal handle As Long, ByVal pioPin As Integer) As Long
Declare Function psWriteUsbMaxPower Lib "TestEngine.dll" (ByVal handle As Long, ByVal maxPower As Integer) As Long
Declare Function psWritePioProtectMask Lib "TestEngine.dll" (ByVal handle As Long, ByVal mask As Integer) As Long
Declare Function psReadPioProtectMask Lib "TestEngine.dll" (ByVal handle As Long, ByRef mask As Integer) As Long
Declare Function psWriteTxOffsetHalfMhz Lib "TestEngine.dll" (ByVal handle As Long, ByVal offset As Integer) As Long
Declare Function psReadTxOffsetHalfMhz Lib "TestEngine.dll" (ByVal handle As Long, ByRef offset As Integer) As Long
Declare Function psWriteUsrValue Lib "TestEngine.dll" (ByVal handle As Long, ByVal userNo As Integer, ByVal length As Integer, ByVal data As Integer) As Long
Declare Function psReadUsrValue Lib "TestEngine.dll" (ByVal handle As Long, ByVal userNo As Integer, ByVal maxLen As Integer, ByRef length As Integer, ByVal data As Integer) As Long
Declare Function psWritePowerTable Lib "TestEngine.dll" (ByVal handle As Long, ByVal numEntries As Integer, ByVal intPA As Byte, ByVal extPA As Byte, ByVal power As Long) As Long
Declare Function psReadPowerTable Lib "TestEngine.dll" (ByVal handle As Long, ByVal maxSize As Long, ByRef numEntries As Long, ByVal intPA As Byte, ByVal extPA As Byte, ByVal power As Long) As Long
Declare Function psWriteVmDisable Lib "TestEngine.dll" (ByVal handle As Long, ByVal vmDisable As Byte) As Long
Declare Function psReadVmDisable Lib "TestEngine.dll" (ByVal handle As Long, ByRef vmDisable As Byte) As Long
Declare Function psMergeFromFile Lib "TestEngine.dll" (ByVal handle As Long, ByVal filePath As String) As Long
Declare Function hciSlave Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function hciSetAfhHostChannelClass Lib "TestEngine.dll" (ByVal handle As Long, ByVal cClass As Byte) As Long
Declare Function hciReadAfhChannelMap Lib "TestEngine.dll" (ByVal handle As Long, ByVal aclHandle As Integer, ByRef mode As Byte, ByVal cMap As Byte) As Long
Declare Function hciSetEventFilterAutoacceptConnection Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function hciWriteInquiryScanActivity Lib "TestEngine.dll" (ByVal handle As Long, ByVal inquiryscan_interval As Integer, ByVal inquiryscan_window As Integer) As Long
Declare Function hciWritePageScanActivity Lib "TestEngine.dll" (ByVal handle As Long, ByVal pagescan_interval As Integer, ByVal pagescan_window As Integer) As Long
Declare Function hciWriteScanEnable Lib "TestEngine.dll" (ByVal handle As Long, ByVal scan_enable As Byte) As Long
Declare Function hciInquiry Lib "TestEngine.dll" (ByVal handle As Long, ByVal inquiryLength As Byte, ByVal numResponses As Byte, ByVal lap As Long) As Long
Declare Function hciGetInquiryResults Lib "TestEngine.dll" (ByVal handle As Long, ByVal lap As Long, ByVal uap As Byte, ByVal nap As Integer, ByVal clockOffset As Integer, ByVal maxLen As Long, ByRef aLen As Long) As Long
Declare Function hciInquiryCancel Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function hciCreateConnection Lib "TestEngine.dll" (ByVal handle As Long, ByVal lap As Long, ByVal uap As Byte, ByVal nap As Integer, ByVal pkt_type As Integer, ByRef connectionHandle As Integer) As Long
Declare Function hciCreateConnectionNoInquiry Lib "TestEngine.dll" (ByVal handle As Long, ByVal lap As Long, ByVal uap As Byte, ByVal nap As Integer, ByVal pkt_type As Integer, ByVal page_scan_rep_mode As Byte, ByVal page_scan_mode As Byte, ByVal clock_offset As Integer, ByVal allow_role_switch As Byte, ByRef connectionHandle As Integer) As Long
Declare Function hciCreateScoConnection Lib "TestEngine.dll" (ByVal handle As Long, ByVal aclConnectionHandle As Integer, ByVal pkt_type As Integer, ByRef scoConnectionHandle As Integer) As Long
Declare Function hciSetupScoConnection Lib "TestEngine.dll" (ByVal handle As Long, ByVal aclConnectionHandle As Integer, ByVal txBandwidth As Long, ByVal rxBandwidth As Long, ByVal maxLatency As Integer, ByVal voiceSetting As Integer, ByVal retransEffort As Byte, ByVal pktType As Integer, ByRef scoConnectionHandle As Integer) As Long
Declare Function hciReadVoiceSetting Lib "TestEngine.dll" (ByVal handle As Long, ByRef voiceSetting As Integer) As Long
Declare Function hciWriteVoiceSetting Lib "TestEngine.dll" (ByVal handle As Long, ByVal voiceSetting As Integer) As Long
Declare Function hciWriteLinkPolicySettings Lib "TestEngine.dll" (ByVal handle As Long, ByVal connection_handle As Integer, ByVal link_policy_settings As Integer) As Long
Declare Function hciSendAclFile Lib "TestEngine.dll" (ByVal handle As Long, ByVal connHandle As Integer, ByVal fileName As String) As Long
Declare Function hciSendAclData Lib "TestEngine.dll" (ByVal handle As Long, ByVal connHandle As Integer, ByVal data As Byte, ByVal length As Integer) As Long
Declare Function hciGetAclData Lib "TestEngine.dll" (ByVal handle As Long, ByVal data As Byte, ByRef numBytes As Long) As Long
Declare Function hciGetAclBytesRead Lib "TestEngine.dll" (ByVal handle As Long, ByRef numBytes As Long) As Long
Declare Function hciGetAclFileName Lib "TestEngine.dll" (ByVal handle As Long, ByVal fileName As String, ByRef length As Long) As Long
Declare Function hciGetAclState Lib "TestEngine.dll" (ByVal handle As Long, ByRef state As Long) As Long
Declare Function hciResetAclState Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function hciReset Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function bccmdGetAnaXtalFtrim Lib "TestEngine.dll" (ByVal handle As Long, ByRef ftrim As Integer) As Long
Declare Function bccmdSetAnaXtalFtrim Lib "TestEngine.dll" (ByVal handle As Long, ByVal ftrim As Integer) As Long
Declare Function hciSniffMode Lib "TestEngine.dll" (ByVal handle As Long, ByVal connection_handle As Integer, ByVal sniff_max_interval As Integer, ByVal sniff_min_interval As Integer, ByVal sniff_attempt As Integer, ByVal sniff_timeout As Integer) As Long
Declare Function hciExitSniff Lib "TestEngine.dll" (ByVal handle As Long, ByVal connection_handle As Integer) As Long
Declare Function hciDisconnect Lib "TestEngine.dll" (ByVal handle As Long, ByVal connection_handle As Integer) As Long
Declare Function hciGetConnectionHandle Lib "TestEngine.dll" (ByVal handle As Long, ByVal lap As Long, ByVal uap As Byte, ByVal nap As Integer, ByRef connectionHandle As Integer) As Long
Declare Function hciConnectionStatus Lib "TestEngine.dll" (ByVal handle As Long, ByVal connection_handle As Integer) As Long
Declare Function hciEnableDeviceUnderTestMode Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function hciGetLinkQuality Lib "TestEngine.dll" (ByVal handle As Long, ByVal connection_handle As Integer, ByRef quality As Byte) As Long
Declare Function hciReadRemoteVersionInformation Lib "TestEngine.dll" (ByVal handle As Long, ByVal connection_handle As Integer, ByVal r As Long) As Long
Declare Function hciReadRemoteNameRequest Lib "TestEngine.dll" (ByVal handle As Long, ByVal lap As Long, ByVal uap As Byte, ByVal nap As Integer, ByVal page_scan_repetition_mode As Byte, ByVal page_scan_offset As Byte, ByVal clock_offset As Integer, ByVal r As String) As Long
Declare Function dmRegisterReq Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function dmSlave Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function dmEnableDeviceUnderTestMode Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function dmWritePageScanActivity Lib "TestEngine.dll" (ByVal handle As Long, ByVal pagescan_interval As Integer, ByVal pagescan_window As Integer) As Long
Declare Function dmWriteInquiryScanActivity Lib "TestEngine.dll" (ByVal handle As Long, ByVal inquiryscan_interval As Integer, ByVal inquiryscan_window As Integer) As Long
Declare Function dmWriteScanEnable Lib "TestEngine.dll" (ByVal handle As Long, ByVal scan_enable As Byte) As Long
Declare Function dmSetEventFilterAutoacceptConnection Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function bccmdBc3PsuTrim Lib "TestEngine.dll" (ByVal handle As Long, ByVal data As Integer) As Long
Declare Function bccmdChargerPsuTrim Lib "TestEngine.dll" (ByVal handle As Long, ByVal trim As Integer) As Long
Declare Function bccmdBc3BuckReg Lib "TestEngine.dll" (ByVal handle As Long, ByVal data As Integer) As Long
Declare Function bccmdPsuSmpsEnable Lib "TestEngine.dll" (ByVal handle As Long, ByVal reg As Integer) As Long
Declare Function bccmdBc3MicEn Lib "TestEngine.dll" (ByVal handle As Long, ByVal data As Integer) As Long
Declare Function bccmdPsuHvLinearEnable Lib "TestEngine.dll" (ByVal handle As Long, ByVal reg As Integer) As Long
Declare Function bccmdBc3Led0 Lib "TestEngine.dll" (ByVal handle As Long, ByVal data As Integer) As Long
Declare Function bccmdLedEnable Lib "TestEngine.dll" (ByVal handle As Long, ByVal led As Integer, ByVal state As Integer) As Long
